# antigravity-drawio-mcp

./: .gitignore  LICENSE  README.md  mcp_config.json  pyproject.toml
.agents/: ORIGINAL_REQUEST.md
.agents/orchestrator/: BRIEFING.md  M1_SEO_Audit_Report.md  ORIGINAL_REQUEST.md  PROJECT.md  context.md  plan.md  progress.md
.agents/sentinel/: BRIEFING.md  handoff.md
.agents/teamwork_preview_auditor_m2/: BRIEFING.md  ORIGINAL_REQUEST.md  check.py  handoff.md
.agents/teamwork_preview_challenger_m2_1/: BRIEFING.md  ORIGINAL_REQUEST.md  file_check.py  handoff.md  jsonld_validator.py  progress.md  verify_readme.py
.agents/teamwork_preview_challenger_m2_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/teamwork_preview_explorer_m1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/teamwork_preview_explorer_m1_2/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/teamwork_preview_explorer_m1_3/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/teamwork_preview_explorer_m2/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md
.agents/teamwork_preview_reviewer_m2_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/teamwork_preview_reviewer_m2_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md  validate_jsonld.py
.agents/teamwork_preview_worker_m2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/teamwork_preview_worker_m3/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md  seo_checker.py
.github/workflows/: publish.yml
docs/: INTEGRATION_GUIDE.md  PUBLISHING_GUIDE.md  architecture.drawio
examples/: 01_basic_architecture.py  02_mermaid_to_drawio.py  03_parse_and_inspect.py  04_mcp_client_simulation.py  README.md
examples/outputs/: 01_basic_architecture.drawio  02_mermaid_converted.drawio  04_mcp_simulated.drawio
src/antigravity_drawio_mcp/: __init__.py  builder.py  exporter.py  mermaid_converter.py  parser.py  server.py  verifier.py
tests/: test_mcp_server.py
tests/output/: test_mcp_diagram.drawio
