[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "antigravity-drawio-mcp"
version = "1.0.1"
description = "Production-grade Model Context Protocol (MCP) server for Draw.io & Google Antigravity"
readme = "README.md"
authors = [{ name = "Sujan S", email = "sujan@antigravity.ai" }]
license = { text = "MIT" }
keywords = ["mcp", "drawio", "antigravity", "ai", "diagrams", "architecture", "flowchart"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "mcp>=1.0.0",
    "defusedxml>=0.7.1",
]

[project.scripts]
antigravity-drawio-mcp = "antigravity_drawio_mcp.server:main"

[project.urls]
Homepage = "https://github.com/S-SUJAN-S/antigravity-drawio-mcp"
Repository = "https://github.com/S-SUJAN-S/antigravity-drawio-mcp.git"
Issues = "https://github.com/S-SUJAN-S/antigravity-drawio-mcp/issues"
