[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "antigravity-drawio-mcp"
version = "1.0.5"
description = "Automate Flowcharts & Draw.io Diagrams with AI. Official Model Context Protocol (MCP) Server for Google Antigravity, Claude Code, Cursor, and VS Code."
readme = "README.md"
authors = [{ name = "SUJAN S", email = "ssujan6299@gmail.com" }]
license = { text = "MIT" }
keywords = [
    "mcp",
    "drawio",
    "antigravity",
    "flowchart-ai",
    "flowchart-generator",
    "diagram-automation",
    "model-context-protocol",
    "ai-diagrams",
    "architecture-diagram",
    "mermaid-to-drawio",
    "cursor-ide",
    "claude-code",
    "google-antigravity",
    "fastmcp",
    "drawio-mcp"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "mcp>=1.0.0",
    "defusedxml>=0.7.1",
]

[project.scripts]
antigravity-drawio-mcp = "antigravity_drawio_mcp.server:main"

[project.urls]
Homepage = "https://github.com/S-SUJAN-S/antigravity-drawio-mcp"
Repository = "https://github.com/S-SUJAN-S/antigravity-drawio-mcp.git"
Issues = "https://github.com/S-SUJAN-S/antigravity-drawio-mcp/issues"
